src/styles.css
@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Outlined");
@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
@import url("https://fonts.googleapis.com/icon?family=Material+Icons+Two+Tone");
@import url("https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
.App {
  font-family: sans-serif;
  text-align: center;
  font-family: "Poppins", sans-serif;
}
* {
  margin: 0;
  padding: 0;
  scroll-behavior: smooth;
}
.logoHeading {
  color: white;
  font-family: "Racing Sans One", cursive;
  font-size: 35px;
}
.navbar {
  width: initial;
  background-color: var(--primary);
  color: white;
  padding: 0 20px;
  border-bottom: 1px solid black;
}
.nav-body {
  display: flex;
  width: 90%;
  margin: auto;
  justify-content: space-evenly;
  align-items: center;
}
.navelement {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.navbuttons {
  margin: 0 1rem;
  text-decoration: none;
}
.login-btn {
  padding: 5px 10px;
  font-size: 16px;
  color: var(--primary);
  background-color: white;
  border: none;
  outline: none;
  font-weight: bold;
  margin-left: 10px;
  cursor: pointer;
}
.avatar-circleIcon {
  margin-left: 10px;
  cursor: pointer;
  padding: 11px 18px;
  border: 1px solid var(--primary);
  background-color: black;
  border-radius: 50%;
  width: fit-content;
  height: fit-content;
}
.avatar-circleIcon > span {
  font-size: 24px;
  color: yellow;
}
.btn-addtoCart {
  padding: 10px;
  font-size: 16px;
  font-weight: bold;
  border-radius: 10px;
  width: 100%;
  margin-top: 10px;
  border: none;
  background: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
}
.icon-size-36 {
  font-size: 36px;
  cursor: default;
}

.icon-size-30 {
  font-size: 30px;
}

.icon-color-red {
  color: var(--danger);
}
.icon-color-gray {
  color: var(--secondary);
}
.icon-color-white {
  color: white;
}
.wishlist {
  width: fit-content;
  border-radius: 50%;
  position: absolute;
  background-color: rgba(177, 174, 174, 0.7);
  left: 250px;
  padding-top: 2px;
}
.Search {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40vw;
  height: 2.1rem;
  background-color: white;
}
.Search-Below {
  align-items: center;
  justify-content: center;
  background-color: white;
  width: 80vw;
  height: 2.1rem;
  margin: auto;
  display: none;
  margin-bottom: 10px;
}
.Search > input,
.Search-Below > input {
  padding-left: 5px;
  width: 100%;
  height: 1.8rem;
  border: none;
  outline: none;
}
.Search > button,
.Search-Below > button {
  background-color: transparent;
  border: none;
  outline: none;
  margin-top: 4px;
}
.Cardbox {
  margin: auto;
  display: flex;
  justify-content: space-evenly;
  align-items: flex-start;
  box-shadow: 0 0 6px 0px black;
  padding: 1rem;
  margin-top: 1rem;
}
.cartContent {
  display: grid;
  grid-template-columns: 3fr 1fr;
}
.incdecbtn {
  padding: 1px 8px;
  color: purple;
  font-size: 22px;
  border-radius: 50%;
  border: none;
  outline: none;
  background-color: rgb(221 219 219);
}
.cartOrder {
  margin: auto;
  border: 1px solid rgba(0, 0, 0, 0.5);
  margin-top: 1rem;
  padding: 1.5rem;
  text-align: start;
}
.cartdetails {
  display: flex;
  justify-content: space-between;
  margin: 5px 0px;
}
.soldout {
  transform: translate(29px, -172px) rotate(-45deg);
  font-size: 3rem;
  color: var(--danger);
  position: absolute;
}
.productbox {
  display: grid;
  grid-template-columns: 1fr 5fr;
}
.filterboxDesk {
  border: 1px solid rgba(0, 0, 0, 0.5);
  border-top: none;
  padding: 8px;
  height: 100vh;
  position: sticky;
  text-align: start;
  top: 0;
}
.filterboxDesk > label {
  display: block;
}
.filterboxMobile {
  display: none;
}
.filterboxMobile_buttons {
  display: none;
  position: fixed;
  bottom: 0;
  z-index: 2;
  background-color: white;
}
.div_filters {
  font-size: 20px;
  padding: 10px;
  width: 44vw;
  border: 1px solid rgba(0, 0, 0, 0.5);
}
.sortBox,
.filterBox {
  border: 1px solid rgba(0, 0, 0, 0.5);
  width: 95vw;
  background-color: white;
  position: fixed;
  text-align: start;
  padding-left: 1rem;
  bottom: 0;
  z-index: 2;
}
.filterBox > label {
  display: block;
  margin: 1rem 0;
}
.sortBox > p {
  margin-bottom: 1rem;
  cursor: default;
}
.closeButton_filter_sort {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1rem;
}
.closeButton_filter_sort > button {
  padding: 5px;
  font-size: 18px;
  font-weight: bold;
  border: none;
  background-color: white;
  outline: none;
  color: purple;
}
.dark_background {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1;
  left: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
}
.home-image {
  width: 100%;
}
.home-card {
  cursor: pointer;
  position: relative;
  border: 1px solid rgba(0, 0, 0, 0.5);
  margin: 1rem;
}
.home-card:hover {
  transform: scale(1.1);
  transition: all 0.3s;
}
.image-size {
  width: 240px;
  height: 240px;
}
.text-overlay-position {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 18px;
  color: black;
  font-weight: bold;
}
.toastBox {
  display: flex;
  align-items: center;
  padding: 5px 15px;
  border: 1px solid green;
  background-color: var(--success);
  position: fixed;
  bottom: 4rem;
  left: 50%;
  z-index: 4;
}
.Login-container {
  background-image: url("https://wallpaperaccess.com/full/2593042.jpg");
  background-position: center;
  background-size: cover;
  backdrop-filter: blur(5.5px);
  display: flex;
  align-items: center;
  justify-content: center;
  height: 90vh;
}
.Login-box {
  width: min-content;
  padding: 0 1rem;
  background: rgba(255, 255, 255, 0.25);
  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
  backdrop-filter: blur(5.5px);
  -webkit-backdrop-filter: blur(5.5px);
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
}
.input-box-text {
  margin: 10px 10px;
}
.input-box-text > input {
  padding: 10px;
  padding-right: 39px;
  font-size: 16px;
  outline: none;
}
.input-box-password {
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px solid black;
  margin: 10px;
}
.input-box-password > input {
  padding: 10px;
  border: none;
  outline: none;
  font-size: 16px;
}
.password-state {
  margin: 0 5px;
}
.login-click-btn {
  width: max-content;
  padding: 10px 6.2rem;
  font-size: 18px;
  margin: 10px;
  background-color: orangered;
  color: white;
  border: none;
  outline: none;
  cursor: pointer;
}
.signup-click-btn {
  width: max-content;
  padding: 10px 5.8rem;
  font-size: 18px;
  margin: 10px;
  background-color: orangered;
  color: white;
  border: none;
  outline: none;
  cursor: pointer;
}
.signup-disabled-btn {
  width: max-content;
  padding: 10px 5.8rem;
  font-size: 18px;
  margin: 10px;
  background-color: rgb(228, 115, 74);
  color: rgb(151, 151, 151);
  border: none;
  outline: none;
  cursor: not-allowed;
}
.product-details {
  margin-top: 1rem;
  display: flex;
  justify-content: center;
  flex-direction: row;
}
.product-image {
  width: 400px;
  height: 406px;
  display: block;
}
.heart-product {
  position: absolute;
  top: 3px;
  right: 30px;
}
.product-addtoCart {
  padding: 8px;
  font-size: 16px;
  color: white;
  font-weight: bold;
  width: 12rem;
  cursor: pointer;
  margin-top: 10px;
  border: none;
  outline: none;
  background: linear-gradient(315deg, #ff4e00 0%, #ec9f05 74%);
}
.btn-logout {
  background-color: red;
  color: white;
  padding: 0.5rem 1rem;
  font-size: 22px;
  outline: none;
  border: none;
}
.cart-display {
  border: 1px solid black;
  width: 80%;
  margin: 1rem auto;
  padding: 1rem;
}
.address-box {
  background-color: #eeeeee;
  display: flex;
  justify-content: space-around;
  align-items: center;
}
.modalScreen {
  position: fixed;
  top: 0;
  left: 0;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 5;
  pointer-events: visible;
}
.modalBox {
  background-color: white;
  margin: 0 1rem;
  padding: 1rem 2rem;
  pointer-events: all;
}
.selectbox {
  margin: 1rem auto;
  display: block;
  padding: 0.3rem;
  font-size: 16px;
  width: 100%;
  background-color: white;
}
.input-box {
  width: 100%;
  display: block;
  margin: 0.5rem auto;
  padding: 0.5rem;
  border: 1px solid gray;
  border-radius: 7px;
  outline: none;
  font-size: 16px;
}
.button-box {
  display: flex;
  align-items: center;
  justify-content: flex-start;
}
.btn-address {
  padding: 5px 9px;
  border: 1px solid var(--primary);
  background-color: white;
  border-radius: 7px;
  color: var(--primary);
  font-size: 18px;
  margin: 0 1rem;
}
.btn-address-solid {
  border-radius: 7px;
  border: none;
  padding: 6px 18px;
  font-size: 18px;
  background-color: var(--primary);
  color: white;
}
.choose-addr {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  margin-top: 1rem;
}
.choose-addr > input {
  margin-right: 1rem;
}
.choose-addr > input[type="radio"] {
  border: 0px;
  width: 2em;
  height: 2em;
}
.addr-label {
  display: block;
  text-align: start;
}
.btn-add-address {
  border: none;
  font-weight: bold;
  font-size: 17px;
  margin-top: 1rem;
  padding: 5px;
  cursor: pointer;
}
.btn-close {
  display: block;
  position: absolute;
  bottom: 22px;
  left: 100%;
  border: none;
  outline: none;
  background-color: red;
  padding: 6px 9px;
  color: white;
  font-weight: bold;
  border-radius: 50%;
}
.clear-filter {
  border-bottom: 2px solid var(--primary);
  cursor: pointer;
  margin-bottom: 1rem;
  display: block;
  width: fit-content;
}
.circle {
  position: fixed;
  right: 19px;
  bottom: 60px;
  padding: 14px 17px;
  background-color: var(--primary);
  border-radius: 50%;
  z-index: 3;
}
.circle i {
  font-size: 26px;
  font-weight: bold;
  color: white;
}
.user-details-page {
  width: 100vw;
  height: 90vh;
  display: grid;
  place-items: center;
}
.user-details-box {
  border: 2px solid gray;
  border-radius: 10px;
  padding: 1rem;
  width: 30vw;
}
.wrapper {
  width: 100vw;
  height: 100vh;
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
}
.payment-success {
  padding: 1rem;
  border: 2px solid black;
}
.payment-success > .tick {
  width: 30px;
  height: 30px;
}
.payment-success > .text {
  margin-bottom: 1rem 0;
}
.payment-success > button {
  background-color: green;
  color: white;
  outline: none;
  border: none;
  padding: 10px 132px;
  font-size: 18px;
  margin: 1rem;
  cursor: pointer;
}
@media only screen and (max-width: 840px) {
  .Search {
    display: none;
  }
  .Search-Below {
    display: flex;
  }
  .productbox {
    display: block;
  }
  .filterboxDesk {
    display: none;
  }
  .filterboxMobile {
    display: block;
  }
  .filterboxMobile_buttons {
    display: flex;
  }
  .nav-body {
    width: 100%;
  }
  .logoHeading {
    font-size: 24px;
  }
  input[type="range"] {
    margin: 10px 5px;
    width: 45%;
  }
  .cartOrder {
    width: 70vw;
  }
  .cartContent {
    display: block;
  }
  .Cardbox {
    display: block;
  }
  .toastBox {
    left: 25%;
  }
  .Login-container {
    height: 80vh;
  }
  .Login-box {
    box-shadow: none;
    background: none;
    box-shadow: none;
    border: none;
    backdrop-filter: none;
  }
  .product-details {
    flex-direction: column;
  }
  .product-image {
    width: 300px;
    height: 306px;
  }
  .avatar-circleIcon {
    padding: 3px 12px;
  }
  .mobileSize {
    font-size: 18px;
  }
  .clear-filter {
    margin-bottom: 0;
  }
  .user-details-box {
    width: 80vw;
  }
}

